tests/ui/issues/issue-41974.stderr
error[E0120]: the `Drop` trait may only be implemented for local structs, enums, and unions
  --> $DIR/issue-41974.rs:7:18
   |
LL | impl<T> Drop for T where T: A {
   |                  ^ must be a struct, enum, or union in the current crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0120`.
